@@ -1,3 +1,8 @@
+2008-03-11  Jens Granseuer  <jensgr@gmx.net>
+
+	* theme-thumbnailer.c: (main): handle failed thumbnailing attempts
+	properly
+
 2008-01-29  Jens Granseuer  <jensgr@gmx.net>
 
 	* themus-properties-view.c: (add_atk_relation): don't leak the ATK
